--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 # Server Configuration
 PORT=5000
-MONGODB_URI=mongodb+srv://your-username:your-password@cluster0.mongodb.net/artistic-sketches?retryWrites=true&w=majority
-JWT_SECRET=your-jwt-secret-key
-
+MONGODB_URI=mongodb+srv://mraj86008:Bloodgamer752@cluster1.xo15i.mongodb.net/
+JWT_SECRET=maineykey7226nahi
 # AWS Configuration
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your-access-key
